--- a/P1/S1/hola_mundo.html
+++ b/P1/S1/hola_mundo.html
@@ -7,7 +7,7 @@ pero en varias lineas-->
 
 <html>
     <head>
-        <meta charset="ut-8">
+        <meta charset="utf-8">
         <title>Ejemplo HTML</title>
     </head>
     <body>
