--- a/P1/pruebas_cv/prueba1.html
+++ b/P1/pruebas_cv/prueba1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<!--Intento1 de texto en movimiento para el título-->
+<!--Intento 1 de texto en movimiento para el título-->
 <html>
-    <MARQUEE WIDTH=80 HEIGHT=90 ALIGN=BOTTOM>MI CURRICULUM</MARQUEE>
+    <MARQUEE WIDTH=80% HEIGHT=90 ALIGN=BOTTOM>MI CURRICULUM</MARQUEE>
 </html>
