--- a/P1/pruebas_cv/prueba1.html
+++ b/P1/pruebas_cv/prueba1.html
@@ -1,5 +1,9 @@
 <!DOCTYPE HTML>
 <!--Intento 1 de texto en movimiento para el título-->
 <html>
-    <MARQUEE WIDTH=80% HEIGHT=90 ALIGN=BOTTOM>MI CURRICULUM</MARQUEE>
+    <head>
+        <MARQUEE WIDTH=80% HEIGHT=90 ALIGN=BOTTOM>ESTE ES MI CURRICULUM</MARQUEE>
+    </head>
+    <body background="naruto.jpg">
+   
 </html>
