--- a/P1/pruebas_cv/prueba1.html
+++ b/P1/pruebas_cv/prueba1.html
@@ -4,6 +4,6 @@
     <head>
         <MARQUEE WIDTH=80% HEIGHT=90 ALIGN=BOTTOM>ESTE ES MI CURRICULUM</MARQUEE>
     </head>
-    <body background="naruto.jpg">
+    <body background="naruto.jpg"></body>
    
 </html>
