--- a/P1/pruebas_cv/prueba1.html
+++ b/P1/pruebas_cv/prueba1.html
@@ -4,6 +4,10 @@
     <head>
         <MARQUEE WIDTH=80% HEIGHT=90 ALIGN=BOTTOM>ESTE ES MI CURRICULUM</MARQUEE>
     </head>
-    <body background="naruto.jpg"></body>
+    <body>
+
+        background: #66999 villa.jpg center center cover no-repeat fixed;
+        
+    ></body>
    
 </html>
