--- a/P1/pruebas_cv/prueba1.html
+++ b/P1/pruebas_cv/prueba1.html
@@ -2,11 +2,13 @@
 <!--Intento 1 de texto en movimiento para el título-->
 <html>
     <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="prueba1.css">
         <MARQUEE WIDTH=80% HEIGHT=90 ALIGN=BOTTOM>ESTE ES MI CURRICULUM</MARQUEE>
     </head>
     <body>
 
-        background: #66999 villa.jpg center center cover no-repeat fixed;
+        <div class="image-fondo"></div>
         
     ></body>
    
