--- a/P1/pruebas_cv/prueba1.html
+++ b/P1/pruebas_cv/prueba1.html
@@ -4,11 +4,11 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="prueba1.css">
-        <MARQUEE WIDTH=100% HEIGHT=90 ALIGN=BOTTOM>ESTE ES MI CURRICULUM</MARQUEE>
+        <MARQUEE WIDTH=100% HEIGHT=90 ALIGN=BOTTOM>BIENVENIDO A MI CURRICULUM</MARQUEE>
     </head>
     <body>
 
-        <div class="image-fondo"></div>
+        <h1>NARUTO UZUMAKI</h1>
         
     ></body>
    
