--- a/P1/pruebas_cv/prueba1.html
+++ b/P1/pruebas_cv/prueba1.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="prueba1.css">
     <head>
-        <MARQUEE WIDTH=100% HEIGHT=90 ALIGN=BOTTOM>BIENVENIDO A MI CURRICULUM</MARQUEE>
+        <MARQUEE WIDTH=100% HEIGHT=90 ALIGN=BOTTOM COLOR = WHITE>BIENVENIDO A MI CURRICULUM</MARQUEE>
     </head>
     <body>
-        <h1>NARUTO UZUMAKI</h1>
+        <h1 COLOR = WHITE >NARUTO UZUMAKI</h1>
         
     </body>
    
