--- a/P1/pruebas_cv/prueba1.html
+++ b/P1/pruebas_cv/prueba1.html
@@ -1,14 +1,25 @@
-<!DOCTYPE HTML>
-<!--Intento 1 de texto en movimiento para el título-->
-<html>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="prueba1.css">
-    <head>
-        <MARQUEE WIDTH=100% HEIGHT=90 ALIGN=BOTTOM COLOR = WHITE>BIENVENIDO A MI CURRICULUM</MARQUEE>
-    </head>
-    <body>
-        <h1 COLOR = WHITE >NARUTO UZUMAKI</h1>
-        
-    </body>
-   
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Pattern Animation (Infinite)</title>
+  <link rel="stylesheet" media="all" href="style.css" />
+</head>
+<body>
+
+<div class="wrapper">
+  <p><img style="display: scroll;position: fixed;top: 0px;left: 0px;" src="cara.gif" width="250" height="250" ></p>
+  <h1 class="title">NARUTO UZUMAKI</h1>
+  <table>
+    <h1 style="margin-left: 800px;">informacion sobre mi</h1>
+  </table>
+<aside>
+  <h2 class="titles">CONTACTOS:</h2>
+  <p><img style="display: scroll;position: fixed;bottom: 220px; left: 10px;" src="telefono.gif" width="70" height="70" ></p>
+  <h2 class="contacts">Teléfono:655555000</h2>
+</aside>
+</div>
+
+</body>
 </html>
