--- a/P1/pruebas_cv/prueba1.html
+++ b/P1/pruebas_cv/prueba1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Pattern Animation (Infinite)</title>
+  <title>Alisson Guanga</title>
   <link rel="stylesheet" media="all" href="style.css" />
 </head>
 <body>
