changes of body

--- a/P1/pruebas_cv/prueba1.html
+++ b/P1/pruebas_cv/prueba1.html
@@ -4,20 +4,26 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Alisson Guanga</title>
-  <link rel="stylesheet" media="all" href="style.css" />
+  <link rel="stylesheet" media="all" href="prueba1.css" />
 </head>
 <body>
-
+<MARQUEE WIDTH=100% HEIGHT=20 ALIGN=BOTTOM> ¡BIENVENIDO! ESTE ES MI CURRICULM </MARQUEE>
 <div class="wrapper">
   <p><img style="display: scroll;position: fixed;top: 0px;left: 0px;" src="cara.gif" width="250" height="250" ></p>
-  <h1 class="title">NARUTO UZUMAKI</h1>
+  <h1 style="position: fixed;top: 10%;right: 30%;">NARUTO UZUMAKI</h1>
   <table>
-    <h1 style="margin-left: 800px;">informacion sobre mi</h1>
+    <tr>
+        <th>INFORMACIÓN SOBRE MI</th>
+    </tr>
+    <th>Soy Naruto vivo en la Villa Oculta de la Hoja</th>
   </table>
 <aside>
-  <h2 class="titles">CONTACTOS:</h2>
+  <h2>CONTACTOS:</h2>
   <p><img style="display: scroll;position: fixed;bottom: 220px; left: 10px;" src="telefono.gif" width="70" height="70" ></p>
   <h2 class="contacts">Teléfono:655555000</h2>
+  <h2 class="contacts">Correo electrónico: naruto.uzumaki@gmail.com</h2>
+  <h2 class="contacts">Canal de youtube: Mrs.Hokage</h2>
+  <h2 class="contacts">Twitter: @Naruto</h2>
 </aside>
 </div>
 
