--- a/P1/pruebas_cv/prueba1.html
+++ b/P1/pruebas_cv/prueba1.html
@@ -2,29 +2,110 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Alisson Guanga</title>
   <link rel="stylesheet" media="all" href="prueba1.css" />
 </head>
 <body>
 <MARQUEE WIDTH=100% HEIGHT=20 ALIGN=BOTTOM> ¡BIENVENIDO! ESTE ES MI CURRICULM </MARQUEE>
 <div class="wrapper">
-  <p><img style="display: scroll;position: fixed;top: 0px;left: 0px;" src="cara.gif" width="250" height="250" ></p>
-  <h1 style="position: fixed;top: 10%;right: 30%;">NARUTO UZUMAKI</h1>
-  <table>
-    <tr>
-        <th>INFORMACIÓN SOBRE MI</th>
-    </tr>
-    <th>Soy Naruto vivo en la Villa Oculta de la Hoja</th>
-  </table>
+  <p><img style="display: scroll;position: fixed;top: 10px;left: 10px;" src="cara.gif" width="250" height="250" ></p>
+  <h1 style="position: fixed;top: 0%;right: 30%;">NARUTO UZUMAKI</h1>
+  <div>
+    <table class="cuerpo">
+      <tr>
+        <td class="title_table" colspan="2">INFORMACIÓN SOBRE MI</td>
+      </tr>
+      <tr>
+        <td class="infor_td" colspan="2">Soy Naruto, vivo en la Villa Oculta de la Hoja.
+          Soy un ninja de Konoha y formo parte del equipo 7, mi sensei es Kakashi Hatake y mis compañeros Sasuke Uchiha 
+          y Sakura Haruno.</td>
+      </tr>
+      <tr>
+        <td class="title_table" colspan="2">HABILIDADES</td>
+      </tr>
+      <tr class="infor_td">
+        <td class="infor_td">
+          <span> <img src="chakraa.gif" alt="Chakra de Naruto" width="70" height="70"></span>
+          <span>Control del Chakra</span>
+        </td>
+        <td class="infor_td">
+          <span><img src="invocacion.gif" alt="Invocación de Naruto" width="70" height="70"></span>
+          <span>Jutsu de invocación</span>
+        </td>
+      </tr>
+      <tr>
+        <td class="infor_td">
+          <span><img src="rasengan.gif" alt="Rasengan de Naruto" width="70" height="70"></span>
+          <span>Rasengan</span>
+        </td>
+        <td class="infor_td">
+          <span> <img src="sombras.gif" alt="Clones de sombras de Naruto" width="70" height="70"></span>
+          <span>Jutsu clones de sombras</span>
+        </td>
+      </tr> 
+      <tr>
+        <td class="title_table" colspan="2">CUALIDADES</td>
+      </tr>
+      <tr>
+        <td class="infor_td" colspan="2">
+          <ul>
+            <li>Perseverancia</li>
+            <li>Valentía</li>
+            <li>Constancia</li>
+            <li>Compañerismo</li>
+            <li>Alegria</li>
+          </ul>
+        </td>
+      </tr>
+    </table>
+    <table class="academic">
+      <tr>
+        <td class="title_table" colspan="5">FORMACIÓN ACADÉMICA</td>
+      </tr>
+      <tr>
+        <th>ACADEMIA KONOHA</th>
+        <th>GENIN</th>
+        <th>CHUNIN</th>
+        <th>JOUNIN</th>
+        <th>HOKAGE</th>
+      </tr>
+      <tr>
+        <td><img src="academia.jpg" alt="naruto en la academia" width="70" height="70"></td>
+        <td><img src="genin.png" alt="naruto como genin" width="70" height="70"></td>
+        <td><img src="chunin.png" alt="naruto como chunin" width="70" height="70"></td>
+        <td><img src="jounin.jpg" alt="naruto como jounin" width="70" height="70"></td>
+        <td><img src="hokage.gif" alt="naruto como hokage" width="70" height="70"></td>
+      </tr>
+    </table>
+  </div>
 <aside>
   <h2>CONTACTOS:</h2>
-  <p><img style="display: scroll;position: fixed;bottom: 220px; left: 10px;" src="telefono.gif" width="70" height="70" ></p>
-  <h2 class="contacts">Teléfono:655555000</h2>
-  <h2 class="contacts">Correo electrónico: naruto.uzumaki@gmail.com</h2>
-  <h2 class="contacts">Canal de youtube: Mrs.Hokage</h2>
-  <h2 class="contacts">Twitter: @Naruto</h2>
+  <table>
+    <tr>
+      <td><img src="telefono.gif" width="70" height="70" ></td>
+      <td><h2 class="contacts">Teléfono:655555000</h2></td>
+    </tr>
+    <tr>
+      <td><img src="gmail.png" alt="logo de correo electrónico" width="40px"></td>
+      <td><h2 class="contacts"><a href="mailto:naruto.hokage@gmail.com" target="_blank" style="color: black;">naruto.hokage@gmail.com</h2></td>
+    </tr>
+    <tr>
+      <td><img src="youtube.png" alt="logo de youtube" width="60px"></td>
+      <td>
+        <a href="https://www.youtube.com/">
+        <input type="button" style="background-color: rgb(248, 112, 0);width:210px;height: 40px;" value="Pincha aquí para ver mis batallas">
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td><img src="twitter.png" alt="logo de Twitter" width="60px"></td>
+      <td><h2 class="contacts">Twitter: @Naruto</h2></td>
+    </tr>
+  </table>   
 </aside>
+
 </div>
 
 </body>
