--- a/P1/pruebas_cv/prueba1.html
+++ b/P1/pruebas_cv/prueba1.html
@@ -80,6 +80,21 @@
       </tr>
     </table>
   </div>
+<div class="idiomas">
+  <p style="text-align: center;">IDIOMAS</p>
+  <span>
+    <img class="imagenes" src="rasengan.png" alt="bola de rasengan">
+    <div class="español">ESPAÑOL</div>
+  </span>
+  <span>
+    <img class="imagenes" src="rasengan.png" alt="bola de rasengan">
+    <div class="ingles">INGLES</div>
+  </span>
+  <span>
+    <img class="imagenes" src="rasengan.png" alt="bola de rasengan">
+    <div class="japones">JAPONES</div>
+  </span>
+</div>
 <aside>
   <h2>CONTACTOS:</h2>
   <table>
