--- a/P1/index.html
+++ b/P1/index.html
@@ -88,11 +88,11 @@
   </span>
   <span>
     <img class="imagenes" src="rasengan.png" alt="bola de rasengan">
-    <div class="ingles">INGLES</div>
+    <div class="ingles">INGLÉS</div>
   </span>
   <span>
     <img class="imagenes" src="rasengan.png" alt="bola de rasengan">
-    <div class="japones">JAPONES</div>
+    <div class="japones">JAPONÉS</div>
   </span>
 </div>
 <aside>
