--- a/P1/index.html
+++ b/P1/index.html
@@ -79,6 +79,7 @@
         <td><img src="hokage.gif" alt="naruto como hokage" width="70" height="70"></td>
       </tr>
     </table>
+    
   </div>
 <div class="idiomas">
   <p style="text-align: center;">IDIOMAS</p>
@@ -95,6 +96,39 @@
     <div class="japones">JAPONÉS</div>
   </span>
 </div>
+<div class="teacher">
+  <p style="text-align: center;">RECOMENDACIONES</p>
+  <ol>
+    <li style="float: left;">
+      <a>Iruka</a>
+      <img class="imagenes" src="iruka.png" alt="sensei kakashi">
+    </li>
+    <li>
+      <a>Kakashi</a>
+      <img class="imagenes" src="kakashi.jpg" alt="sensei iruka">
+    </li>
+    <li style="float: left;">
+      <a>Ebisu</a>
+      <img class="imagenes" src="ebusi.png" alt="sensei kakashi">
+    </li>
+    <li>
+      <a>Jiraiya</a>
+      <img class="imagenes" src="jiraiya.png" alt="sensei iruka">
+    </li>
+    <li style="float: left;">
+      <a>Killer Bee</a>
+      <img class="imagenes" src="killer.png" alt="sensei kakashi">
+    </li>
+    <li>
+      <a>Tsunade</a>
+      <img class="imagenes" src="tsunade.png" alt="sensei iruka">
+    </li>
+  </ol>
+</div>
+<div>
+  <p><img style="display: scroll;position: fixed;top: 1200px;left: 30px;" src="mifrase.jpg" width="450" height="350" ></p>
+</div>
+
 <aside>
   <h2>CONTACTOS:</h2>
   <table>
