--- a/P2/index.html
+++ b/P2/index.html
@@ -11,12 +11,28 @@
 <body>
     <table class="calculadora">
         <tr>
-            <td colspan="4"><span id="resultado"></span></td>
+            <td colspan="4"><span id="caja"></span></td>
+        </tr>
+        <tr>
+            <td><button id="cuatro">0</button></td>
+            <td><button id="cinco">00</button></td>
+            <td><button id="seis">C</button></td>
+            <td rowspan="4"><button id="suma">+</button></td>
         </tr>
         <tr>
             <td><button id="uno">1</button></td>
             <td><button id="dos">2</button></td>
             <td><button id="tres">3</button></td>
+        </tr>
+        <tr>
+            <td><button id="cuatro">4</button></td>
+            <td><button id="cinco">5</button></td>
+            <td><button id="seis">6</button></td>
+        </tr>
+        <tr>
+            <td><button id="cuatro">7</button></td>
+            <td><button id="cinco">8</button></td>
+            <td><button id="seis">9</button></td>
         </tr>
         <tr>
             <td><button id="suma">+</button></td>
@@ -26,5 +42,6 @@
     <p id="display">0</p>
     <button type="button" value="1" class="digito">1</button>
     <button type="button" value="2" class="digito">2</button>
+    <p><img src="naruto_fondo.png" alt="imagen de naruto"></p>
 </body>
 </html>
