--- a/P2/index.html
+++ b/P2/index.html
@@ -14,15 +14,15 @@
             <td colspan="4"><span id="caja"></span></td>
         </tr>
         <tr>
-            <td><button id="cuatro">0</button></td>
-            <td><button id="cinco">00</button></td>
-            <td><button id="seis">C</button></td>
-            <td rowspan="4"><button id="suma">+</button></td>
+            <td><button id="digito" value="0">0</button></td>
+            <td><button id="digito" value="00">00</button></td>
+            <td><button id="clear" >AC</button></td>
+            <td rowspan="4"><button id="suma" value="+">+</button></td>
         </tr>
         <tr>
-            <td><button id="uno">1</button></td>
-            <td><button id="dos">2</button></td>
-            <td><button id="tres">3</button></td>
+            <td><button type="button" value="1" class="digito">1</button></td>
+            <td><button type="button" value="2" class="digito">2</button></td>
+            <td><button id="digito" value="3">3</button></td>
         </tr>
         <tr>
             <td><button id="cuatro">4</button></td>
@@ -40,8 +40,7 @@
         </tr>
     </table>
     <p id="display">0</p>
-    <button type="button" value="1" class="digito">1</button>
-    <button type="button" value="2" class="digito">2</button>
-    <p><img src="naruto_fondo.png" alt="imagen de naruto"></p>
+   
+    <p><img class="fondo" src="naruto_fondo.png" alt="imagen de naruto"></p>
 </body>
 </html>
