--- a/P2/index.html
+++ b/P2/index.html
@@ -9,7 +9,7 @@
     <title>Calculadora</title>
 </head>
 <body>
-    <table cellpadding="0" cellspacing="0" class="calculadora">
+    <table cellpadding="0" cellspacing="0" >
         <tr>
             <td colspan="4"><span id="caja"></span></td>
         </tr>
@@ -37,7 +37,7 @@
             <td><button type="button" value="1" class="digito">1</button></td>
         </tr>
         <tr>
-            <td><button id="igual">=</button></td>
+            <td><button id="digito" value="suma" class="digito">=</button></td>
         </tr>
     </table>
     <p id="display">0</p>
