--- a/P2/pruebas_calc/prueba2.html
+++ b/P2/pruebas_calc/prueba2.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" media="all" href="index.css" />
-    <script src="index.js" defer></script>
+    <link rel="stylesheet" media="all" href="prueba2.css" />
+    <script src="prueba2.js" defer></script>
     <title>Calculadora</title>
 </head>
 <body>
