--- a/P3/index.html
+++ b/P3/index.html
@@ -11,5 +11,11 @@
 <body>
     <h2>JUEGO DE PONG</h2>
     <canvas id="canvas"></canvas>
+    <div id="music">
+        <span id="play">Music</span>
+        <span id="mute">Silencio</span>
+        <!-- <iframe src="naruto.mp3" controls>
+	    </iframe> -->
+    </div>
 </body>
 </html>
