--- a/P4/index.html
+++ b/P4/index.html
@@ -26,8 +26,19 @@
         </table>
     </div>
     <div>
-        <input type="button" value="GRISES" id="button">
-        <input type="button" value="COLORES" id="button">
+        <input type="button" value="GRISES" id="grises">
+        <input type="button" value="COLOREsS" id="button">
+    </div>
+    <div>
+        <p>Establece el umbral de rojo:</p>
+        <input type="range" id="deslizador1" min="0" max="255" value="255"/>
+        <p id="range_value1">00</p>
+        <p>Establece el umbral de verde:</p>
+        <input type="range" id="deslizador2" min="0" max="255" value="255"/>
+        <p id="range_value2">00</p>
+        <p>Establece el umbral de azul:</p>
+        <input type="range" id="deslizador3" min="0" max="255" value="255"/>
+        <p id="range_value3">00</p>
     </div>
 </body>
 </html>
