--- a/P5/index.html
+++ b/P5/index.html
@@ -13,7 +13,8 @@
     <div class="videos">
         <span>
             <input type="button" value="Auto" id="btn_auto" class="botones"> 
-            <input type="button" value="Manual" id="auto" class="botones">
+            <input type="button" value="Manual" id="btn_manual" class="botones">
+            <input type="button" value="Manual" id="btn_loop" class="botones">
         </span>
          
         <video id="directo" ></video>
