--- a/P5/index.html
+++ b/P5/index.html
@@ -14,7 +14,7 @@
         <span>
             <input type="button" value="Auto" id="btn_auto" class="botones"> 
             <input type="button" value="Manual" id="btn_manual" class="botones">
-            <input type="button" value="Manual" id="btn_loop" class="botones">
+            <input type="button" value="Loop" id="btn_loop" class="botones">
         </span>
          
         <video id="directo" ></video>
