cambios sin resultado calc

--- a/P2/index.html
+++ b/P2/index.html
@@ -15,7 +15,7 @@
         <table >
             <tr>
                 <td><button class="boton" onclick="clean()">C</button></td>
-                <td><button class="boton" onclick="parcial()">CE</button></td>
+                <td><button class="boton" onclick="parcial()">DEL</button></td>
                 <td><button class="boton" onclick="insert('/')">/</button></td>
                 <td><button class="boton" onclick="insert('*')">*</button></td>
             </tr>
