casi terminado calc

--- a/P2/index.html
+++ b/P2/index.html
@@ -18,14 +18,14 @@
     </head>
     <body>
         
-        <table>
+        <table style="background-color: rgb(38, 153, 153);">
             <tr>
                 <td colspan="4"><p class="display"id="display">0</p></td>
             </tr>
             <tr>
                 <td><button class="digito" type="button" id="clear">AC</button></td>
-                <td><button class="digito" type="button" id="clear_all">C</button></td>
-                <td><button class="digito" type="button" id="boton" value="%">%</button></td>
+                <td><button class="digito" type="button" id="borrar_ultimo">DEL</button></td>
+                <td><button class="digito" type="button" id="porcentaje" value="%">%</button></td>
                 <td><button class="digito" type="button" id="elevar" value="^">^</button></td>
             </tr>
             <tr>
@@ -57,7 +57,7 @@
                 <td><button class="digito" type="button" id="boton" value="0">0</button></td>
                 <td><button class="digito" type="button" id="boton" value="2">.</button></td>
                 <td><button class="digito" type="button" id="igual" >=</button></td>
-                <td><button class="digito"type="button" id="suma" value="+">-</button></td>
+                <td><button class="digito"type="button" id="resta" value="-">-</button></td>
             </tr>
     
         </table>
