solo me falta raiz

--- a/P2/index.html
+++ b/P2/index.html
@@ -26,7 +26,7 @@
                 <td><button class="digito" type="button" id="clear">AC</button></td>
                 <td><button class="digito" type="button" id="borrar_ultimo">DEL</button></td>
                 <td><button class="digito" type="button" id="porcentaje" value="%">%</button></td>
-                <td><button class="digito" type="button" id="elevar" value="^">^</button></td>
+                <td><button class="digito" type="button" id="raiz" value="√">√</button></td>
             </tr>
             <tr>
     
