calc casi terminada falta raiz

--- a/P2/index.html
+++ b/P2/index.html
@@ -16,9 +16,9 @@
         <link rel="stylesheet" href="prueba_calc.css">
         <title>Calculadora 0.2</title>
     </head>
-    <body>
-        
-        <table style="background-color: rgb(38, 153, 153);">
+    <body style="background-color: black;">
+        <h1 style="color:blueviolet;font-size:xx-large;text-align: center;font-size: 60px;">GALAXY CALC</h1>
+        <table class = "calc" background= "galaxia.jpg" >
             <tr>
                 <td colspan="4"><p class="display"id="display">0</p></td>
             </tr>
