p4 terminada con readme

--- a/P4/index.html
+++ b/P4/index.html
@@ -8,7 +8,7 @@
     <script src="index.js" defer></script>
     <title>Ejemplo 1</title>
 </head>
-<body>
+<body background="fondo.png" style="text-align: center;">
     <h1>EFECTOS DIGIMON</h1>
     <div>
         <table>
@@ -21,7 +21,7 @@
                     <img src="digimon.jpg" id="imagen1">
                 </td>
                 <td>
-                    <canvas id="canvas"></canvas>
+                    <canvas id="canvas" style="text-align: center;"></canvas>
                 </td>
             </tr>
         </table>
@@ -38,6 +38,9 @@
     <div>
         <input type="button" value="GRISES" id="grises">
         <input type="button" value="COLORES" id="button">
+        <input type="button" value="GIRO VERTICAL HACIA ABAJO" id="abajo">
+        <input type="button" value="GIRO HORIZONTAL" id="horizontal">
+        <input type="button" value="INVERTIR COLORES" id="invertir">
     </div>
     <div>
         <p>Establece el umbral de rojo:</p>
