--- a/P2/index.html
+++ b/P2/index.html
@@ -55,7 +55,7 @@
             <br>
             <tr>
                 <td><button class="digito" type="button" id="boton" value="0">0</button></td>
-                <td><button class="digito" type="button" id="boton" value="2">.</button></td>
+                <td><button class="digito" type="button" id="coma" value=".">.</button></td>
                 <td><button class="digito" type="button" id="igual" >=</button></td>
                 <td><button class="digito"type="button" id="resta" value="-">-</button></td>
             </tr>
